--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,10 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+    url: /publications/   
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
+  - title: "Experience"
     url: /cv/
     
-  - title: "Guide"
+  - title: "Services"
     url: /markdown/
