--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Yu Fangxu's homepage"
 title_separator          : "-"
 name                     : &name "Yu Fangxu"
 description              : &description "personal description"
-url                      : https://yu-fangxu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+URL                      : "https://yu-fangxu.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://github.com/Yu-Fangxu?tab=repositories"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
