--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yu Fangxu's homepage"
 title_separator          : "-"
 name                     : &name "Yu Fangxu"
-description              : &description "personal description"
+description              : &description "A second year master's student from Nanjing University"
 URL                      : "https://yu-fangxu.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/Yu-Fangxu?tab=repositories"
