--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Yu Fangxu"
   avatar           : "profile.png"
-  bio              : "Master student, School of AI, Nanjing University"
-  location         : "Nanjing, China"
+  bio              : "Ph.D. student, University of Maryland, College Park"
+  location         : "College Park, MD, USA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=AQjUv4YAAAAJ&hl=zh-CN"
