--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yu Fangxu"
-  avatar           : "profile.png"
+  avatar           : "photo.jpg"
   bio              : "Ph.D. student, University of Maryland, College Park"
   location         : "College Park, MD, USA"
   employer         :
